--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="./styles/Portfolio.css">
+  <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-  <script src="Portfolio.js"></script>
+  
 </head>
 <body>
   <!-- Header -->
@@ -171,6 +171,6 @@
   </footer>
  <!--------------------- JS toggle menu -------------------->
  
-
+<script src="./pages/index.js"></script>
 </body>
 </html>
