--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- about session -->
   <section class="about" id="about">
     <div class="about-image">
-      <img src="image/IMG-20241020-WA0037.jpg" alt="">
+      <img src="./image/IMG-20241020-WA0037.jpg" alt="">
     </div>
     <div class="about-text">
       <h2>About  <span>Me</span></h2>
@@ -97,7 +97,7 @@
     </div>
     <div class="portfolio-content">
         <div class="row">
-           <img src="image/first code.png" alt=""></img>
+           <img src="./image/first code.png" alt=""></img>
             <div class="cover">
               <h5>Visual Designs</h5>
               <p>A designer is a creative professional who uses artistic and technical skills to create visual concepts that communicate ideas, solve problems, and enhance user experiences. They work in various fields like graphic design, fashion, product design, or UI/UX, blending aesthetics with functionality to meet the needs of users or clients.
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="row">
-           <img src="image/IMG-20241020-WA0139.jpg" alt=""></img>
+           <img src="./image/IMG-20241020-WA0139.jpg" alt=""></img>
             <div class="cover">
               <h5>Visual Designs</h5>
               <p>A designer is a creative professional who uses artistic and technical skills to create visual concepts that communicate ideas, solve problems, and enhance user experiences. They work in various fields like graphic design, fashion, product design, or UI/UX, blending aesthetics with functionality to meet the needs of users or clients.
@@ -115,7 +115,7 @@
             </div>
         </div>
        <div class="row">
-           <img src="image/fourth code.png" alt=""></img>
+           <img src="./image/fourth code.png" alt=""></img>
             <div class="cover">
               <h5>Visual Designs</h5>
               <p>A designer is a creative professional who uses artistic and technical skills to create visual concepts that communicate ideas, solve problems, and enhance user experiences. They work in various fields like graphic design, fashion, product design, or UI/UX, blending aesthetics with functionality to meet the needs of users or clients.
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="row">
-           <img src="image/fifth code.png" alt=""></img>
+           <img src="./image/fifth code.png" alt=""></img>
             <div class="cover">
               <h5>Visual Designs</h5>
               <p>A designer is a creative professional who uses artistic and technical skills to create visual concepts that communicate ideas, solve problems, and enhance user experiences. They work in various fields like graphic design, fashion, product design, or UI/UX, blending aesthetics with functionality to meet the needs of users or clients.
